<resources>
    <string name="app_name">Show my movies</string>
    <string name="show_my_movies">Show My Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title">Movie Title</string>
    <string name="book_ticket">Book Ticket</string>
    <string name="synopsis">SYNOPSIS</string>
    <string name="description">A slum dweller, Kokki Kumar (Dhanush) returns from a movie to find his mother murdered by his own father.Prison exposes him to a whole new culture and a set of people who train him in a life of crime and violence, until Kumar becomes a consummate gangster. Delving further into the dark world, he murders many to become a powerful mob kingpin and joins hands with crooked politicians in his thirst for more power.</string>
    <string name="cast">Cast</string>
    <string name="about">About</string>
</resources>