<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/movieCover"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:background="@drawable/ic_launcher_background"
                android:scaleType="fitXY"
                app:riv_border_color="#333333"
                app:riv_corner_radius_bottom_left="15dip"
                app:riv_corner_radius_bottom_right="15dip"
                app:riv_mutate_background="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/book_ticket"
                android:textAllCaps="true"
                android:textColor="@color/white"/>

            <LinearLayout
                android:id="@+id/movieDetailsDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/_20sdp">
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_90sdp">

                    <TextView
                        android:id="@+id/movieReleaseDate"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:gravity="center"
                        android:text="Year"
                        android:textColor="@color/white"
                        android:background="@drawable/year_rating_background"/>

                    <TextView
                        android:id="@+id/movieImdbRating"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:background="@drawable/year_rating_background"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:text="9.0"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/movieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginTop="@dimen/_10sdp"/>

                <LinearLayout
                    android:id="@+id/genreTags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/genre1"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_20sdp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="Action"
                        android:textColor="@color/white"
                        android:background="@drawable/genre_background"/>

                    <TextView
                        android:id="@+id/genre2"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_20sdp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="Action"
                        android:textColor="@color/white"
                        android:background="@drawable/genre_background"/>

                    <TextView
                        android:id="@+id/genre3"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_20sdp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="Action"
                        android:textColor="@color/white"
                        android:background="@drawable/genre_background"/>


                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@+id/movieCover">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/_10sdp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/synopsis"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/movieDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/description"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:background="@color/grey">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/cast"
                        android:textColor="@color/white"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/castRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:visibility="gone"
                        android:orientation="horizontal"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/about"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:text="Original Title:"
                                android:textColor="@color/grey2"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:text="Status:"
                                android:textColor="@color/grey2"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:textColor="@color/grey2"
                                android:text="Runtime:"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:text="Type:"
                                android:textColor="@color/grey2"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:text="Premiere:"
                                android:textColor="@color/grey2"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:text="Budget:"
                                android:textColor="@color/grey2"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:text="Revenue:"
                                android:textColor="@color/grey2"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:text="Homepage:"
                                android:textColor="@color/grey2"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">
                            <TextView
                                android:id="@+id/aboutTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/aboutStatus"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/aboutRuntime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/aboutType"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/aboutPremiere"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/aboutBudget"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:textColor="@color/white"/>

                            <TextView
                                android:id="@+id/aboutRevenue"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:textColor="@color/white"/>

                            <TextView
                                android:id="@+id/aboutHomePage"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:inputType="textUri"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>





        </RelativeLayout>



    </androidx.core.widget.NestedScrollView>

</RelativeLayout>